tests/fixtures/invalid/nullable-return.php
<?php

declare(strict_types=1);

function identity(string|null $input): ?string
{
    return $input;
}
